# call-agent

./: .env.example  .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
data/: knowledge_base.yaml  user_contexts.yaml
src/: __init__.py
src/agent/: __init__.py  context.py  intent_router.py  knowledge_base.py  llm_classifier.py  state_machine.py
src/payer/: __init__.py  simulator.py
tests/: __init__.py  test_payer.py
tests/fixtures/: contradictory.yaml  demo.yaml  drop_mid_call.yaml  golden_benefits.yaml  golden_denial.yaml  golden_prior_auth.yaml  off_script.yaml  transfer.yaml  unreachable.yaml
